# ffmpeg_android

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/lz/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/lz/ffmpeg/: FFmpegNativeUtil.java  MainActivity.java  MyVideoView.java
app/src/main/jni/: com_example_lz_ffmpeg_FFmpegNativeUtil.h  com_example_lz_ffmpeg_MainActivity.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/lz/ffmpeg/: ExampleUnitTest.java
